feat：完善 HTTP 调试、脚本管理与任务详情体验
新增后端 HTTP 调试与空白脚本创建能力，优化 JMeter 脚本规范化与执行失败摘要；任务详情页移除冗余按钮并改进结果树分页。